--- a/src/schooltool/gradebook/locales/lt.po
+++ b/src/schooltool/gradebook/locales/lt.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-04-18 01:51+0300\n"
-"PO-Revision-Date: 2010-05-20 20:32+0000\n"
+"PO-Revision-Date: 2011-06-29 15:49+0000\n"
 "Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: Lithuanian\n"
-"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-10 04:55+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-06-30 04:46+0000\n"
+"X-Generator: Launchpad (build 13168)\n"
+"Language: lt\n"
 "X-Rosetta-Version: 0.1\n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -600,7 +600,8 @@ msgstr "Mažiausias patenkinamas įvertis"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:209
 msgid "You must specify both a report activity and a minimum passing score."
-msgstr "Turite nurodyti ir ataskaitos veiklą, ir mažiausią patenkinamą įvertį."
+msgstr ""
+"Turite nurodyti ir ataskaitos veiklą, ir mažiausią patenkinamą įvertį."
 
 #: /src/schooltool/gradebook/browser/request_reports.py:234
 msgid "Request Absences By Day Report"
